--- a/public/Page2.html
+++ b/public/Page2.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<body style="background-color:black; color:purple; padding:20px;">
+<!DOCTYPE html>
+<html>
 <style>
 ul {
     list-style-type: none;
@@ -79,9 +82,9 @@ li.dropdown {
 </body>
 <body style="background-color:black; color:purple; padding:20px;">
 <h1 style="text-align:center;">GAMEX<br>{Home Of Games}</br></h1>
-Welcome to <strong>GAMEX</strong>{The home of games}here you would find exclusive games here and  many more {you would be stuck here i bet} you will find many games and emulators here to download such as PLAYSTATION GAMES,XBOX GAMES,NINTENDO SWITCH GAMES,ANDROID HACKED GAMES,EMULATORS,AND MORE.{TIP} Select The Type of Console game you want on the GAMES menu bar  
+Welcome to <strong>GAMEX</strong>{The home of games}here you would find exclusive games here and  many more {you would be stuck here i bet} you will find many games and emulators here to download such as PLAYSTATION GAMES,XBOX GAMES,NINTENDO SWITCH GAMES,ANDROID HACKED GAMES,EMULATORS,AND MORE.{TIP} Select The Type of Console <strong>EMULATOR</strong>you want on the EMULATOR MENU bar  
 <p style="text-align:center;">
-<h2 style="text-align:center;"><strong>SELECT THE GENRE</strong></h2>
+<h2 style="text-align:center;"><strong>SELECT THE CONSOLE EMULATOR</strong></h2>
 </body>
 </html> 
 <html>
@@ -113,58 +116,58 @@ div.desc {
 
 <div class="img">
   <a target="_self" href="">
-    <img src="assets/images/images (12).jpeg" alt="" width="" height="">
+    <img src="" alt="" width="" height="">
   </a>
-  <div class="desc"><strong>SIMULATION</strong></div>
+  <div class="desc"><strong></strong></div>
 </div>
 
 <div class="img">
   <a target="_self" href="">
-    <img src="assets/images/images (10).jpeg" width="" height="">
+    <img src="" width="" height="">
   </a>
-  <div class="desc"><strong>FIGHTING</strong></div>
+  <div class="desc"><strong></strong></div>
 </div>
 
 <div class="img">
   <a target="_self" href="">
-    <img src="assets/images/images (5).jpeg" alt="" width="" height="">
+    <img src="" alt="" width="" height="">
   </a>
-  <div class="desc"><strong>SPORTS</strong></div>
+  <div class="desc"><strong></strong></div>
 </div>
 
 <div class="img">
   <a target="_self" href="">
-    <img src="assets/images/images (6).jpeg" width="" height="">
+    <img src="" width="" height="">
   </a>
-  <div class="desc"><strong>ADVENTURE</strong></div>
+  <div class="desc"><strong></strong></div>
 </div>
 
 <div class="img">
   <a target="_self" href="">
-    <img src="assets/images/images (7).jpeg" alt="Northern Lights" width="" height="">
+    <img src="" alt="Northern Lights" width="" height="">
   </a>
-  <div class="desc"><strong>SHOOTING</strong></div>
+  <div class="desc"><strong></strong></div>
 </div>
 
 <div class="img">
   <a target="_self" href="">
-    <img src="assets/images/images (8).jpeg" alt="Northern Lights" width="" height="">
+    <img src="" alt="Northern Lights" width="" height="">
   </a>
-  <div class="desc"><strong>RACING</strong></div>
+  <div class="desc"><strong></strong></div>
 </div>
 
 <div class="img">
   <a target="_self" href="img_lights.jpg">
-    <img src="assets/images/images (9).jpeg" alt="Northern Lights" width="" height="">
+    <img src="" width="" height="">
   </a>
-  <div class="desc"><strong>RPG</strong></div>
+  <div class="desc"><strong></strong></div>
 </div>
 
 <div class="img">
   <a target="_self" href="">
-    <img src="assets/images/uncharted-4_hjhq.1920.jpg" alt="" width="" height="">
+    <img src="" alt="" width="" height="">
   </a>
-  <div class="desc"><strong>ACTION</strong></div>
+  <div class="desc"><strong></strong></div>
 </div>
 
 <h2 style="text-align:center;"><a href="./public/page2.html"><strong>NEXT>></strong></h2>
@@ -175,3 +178,8 @@ div.desc {
 
 
 
+
+</body>
+<h2><a href="file:///C:/Users/waris/OneDrive/Documents/MY%20stuff/index.html"><strong>BACK</strong></h2>
+</body>
+</html>
